# docsman

./: Cargo.toml  README.md
.github/workflows/: ci.yml
layout/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
layout/src/: App.svelte  main.js
src/: main.rs  server.rs  watcher.rs  websockets.rs
