[package]
name = "docsman"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
clap = { version = "4.5.38", features = ["derive"] }
markdown = "1.0.0"
notify = "8.0.0"
futures = "0.3.31"
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1.0.140"
base64 = "0.22.1"
glob = "0.3.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"